[package]
name = "league_of_battles_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "home-server"
path = "src/server.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lambda_runtime = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
uuid = { version = "^0.8", features = ["v4"] }
serde_dynamo = { version = "4.0.12", features = ["aws-sdk-dynamodb+0_24"] } 
dotenv = "0.15.0"
reqwest = "0.11.14"
url = "2.3.1"
lazy_static = "1.4.0"
chrono = "0.4.24"

[build-dependencies]
tonic-build = "0.7"

